# claude-computer

./: .gitignore  README.md  pyproject.toml  streamlit.py
computer-use-demo/tests/: streamlit_test.py
computer_use_demo/: loop.py
computer_use_demo/tools/: computer.py
